[gd_scene load_steps=20 format=3 uid="uid://b2hva3km3ay5r"]

[ext_resource type="Script" path="res://scripts/slime_boss.gd" id="1_kikg1"]
[ext_resource type="Texture2D" uid="uid://caj5csky7ulr3" path="res://assets/sprites/slime_green.png" id="2_mx6i3"]
[ext_resource type="PackedScene" uid="uid://cw0t5egjis6sm" path="res://scenes/killzone.tscn" id="3_fwjrf"]
[ext_resource type="AudioStream" uid="uid://bwcvl007ya41h" path="res://assets/sounds/jump.wav" id="4_qxp7a"]
[ext_resource type="AudioStream" uid="uid://b58svrhsuaub7" path="res://assets/sounds/explosion.wav" id="5_sgpuq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pvxd0"]
atlas = ExtResource("2_mx6i3")
region = Rect2(48, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_dlyh1"]
atlas = ExtResource("2_mx6i3")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_07pj6"]
atlas = ExtResource("2_mx6i3")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_7d7wo"]
atlas = ExtResource("2_mx6i3")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_c03wt"]
atlas = ExtResource("2_mx6i3")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_mnns5"]
atlas = ExtResource("2_mx6i3")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ahgs8"]
atlas = ExtResource("2_mx6i3")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_t74so"]
atlas = ExtResource("2_mx6i3")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_ijdmb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvxd0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dlyh1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_07pj6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7d7wo")
}],
"loop": false,
"name": &"die",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c03wt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mnns5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ahgs8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t74so")
}],
"loop": true,
"name": &"yum",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j6p4w"]
size = Vector2(12, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_leppr"]
size = Vector2(4, 4)

[sub_resource type="Animation" id="Animation_1b8ou"]
resource_name = "die"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DeathSound")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DieSound:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_yvyf3"]
resource_name = "hit"
length = 2.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 1.3),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"play_die"
}, {
"args": [],
"method": &"play_yum"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:move")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_65mdh"]
_data = {
"die": SubResource("Animation_1b8ou"),
"hit": SubResource("Animation_yvyf3")
}

[node name="slime_boss" type="Area2D"]
scale = Vector2(2.36, 2.36)
collision_mask = 2
script = ExtResource("1_kikg1")
move = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 0, 0, 1)
self_modulate = Color(0.999996, 0.956224, 0.94895, 1)
sprite_frames = SubResource("SpriteFrames_ijdmb")
animation = &"die"
autoplay = "yum"
flip_h = true

[node name="Killzone" parent="." instance=ExtResource("3_fwjrf")]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Killzone"]
position = Vector2(0, 7)
shape = SubResource("RectangleShape2D_j6p4w")
debug_color = Color(0.996754, 0, 0.180426, 0.42)

[node name="RayCastLeft" type="RayCast2D" parent="."]
target_position = Vector2(-9, 0)

[node name="RayCastRight" type="RayCast2D" parent="."]
target_position = Vector2(8, 0)

[node name="WeakSpot" type="Area2D" parent="."]
collision_mask = 2
priority = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="WeakSpot"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_leppr")
debug_color = Color(0.908516, 0.38834, 0.347308, 0.419608)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_65mdh")
}

[node name="DieSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_qxp7a")
pitch_scale = 2.37
bus = &"SFX"

[node name="IFrameTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_sgpuq")
pitch_scale = 0.43
bus = &"SFX"

[connection signal="body_entered" from="Killzone" to="." method="_on_killzone_body_entered"]
[connection signal="body_entered" from="WeakSpot" to="." method="_on_weak_spot_body_entered"]
[connection signal="timeout" from="IFrameTimer" to="." method="_on_i_frame_timer_timeout"]
